add separate function for delete and checked btn

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <div class="container">
     <h1>To Do List</h1>
     <div class="todo-box">
-      <div class="todo">
+      <form class="todo">
         <input type="text" class="todo-input">
         <button class="add-btn">+</button>
-      </div>
+      </form>
     </div>
     <div class="todo-content">
       <!-- <div class="todo-task">
